# PictureAnalysis

./: .gitignore  CMakeLists.txt  Filter.cpp  Filter.h  contour.cpp  contour.h  filter.cpp  filter.h  gradient.cpp  gradient.h  graphe.cpp  graphe.h  main.cpp  threshold.cpp  threshold.h  window.cpp  window.h
